--- a/blog/templates/add_category.html
+++ b/blog/templates/add_category.html
@@ -1,18 +1,18 @@
 {% extends 'base.html'   %}
 
 {% block title %}
-Create a New Post
+Create A New Category
 {% endblock %}
 
 {% block content %}
 {% if user.is_authenticated %}
-    <h1>Add Post</h1>
+    <h1>Add Category</h1>
     <br/><br/>
     <div class="form-group">
         <form method="POST">
             {% csrf_token %}
             {{ form.as_p }}
-            <button class="btn btn-secondary">Add Post</button>
+            <button class="btn btn-secondary">Add Category</button>
         </form>
     </div>
 {% else %}
