--- a/blog/templates/categories.html
+++ b/blog/templates/categories.html
@@ -1,12 +1,12 @@
 {% extends 'base.html'   %}
 
 {% block content %}
-<h1>Post</h1>
+{% if category_posts %}
+<h1>{{ cats }}</h1>
 <ul>
-{% for post in object_list %}
+{% for post in category_posts %}
     <li><a href="{% url 'article-detail' post.pk %}">
         {{ post.title }}</a>
-        - <a href ="{% url 'category' post.category|slugify%}">{{ post.category }}</a>
         - {{ post.author.first_name}}
         {{ post.author.last_name }} -
         {{ post.post_date }}
@@ -18,7 +18,7 @@
         {{ post.body|slice:":200"|safe }}</li>
 {% endfor %}
 </ul>
-
-
-
+{% else%}
+    <h2>Sorry, this page does not exist...</h2>
+{% endif %}
 {% endblock %}
