--- a/blog/templates/registration/register.html
+++ b/blog/templates/registration/register.html
@@ -1,21 +1,17 @@
 {% extends 'base.html'   %}
 
 {% block title %}
-Create a New Post
+Register
 {% endblock %}
 
 {% block content %}
-{% if user.is_authenticated %}
-    <h1>Add Post</h1>
+    <h1>Register</h1>
     <br/><br/>
     <div class="form-group">
         <form method="POST">
             {% csrf_token %}
             {{ form.as_p }}
-            <button class="btn btn-secondary">Add Post</button>
+            <button class="btn btn-secondary">Register</button>
         </form>
     </div>
-{% else %}
-You're  not allowed here
-{% endif %}
 {% endblock %}
