--- a/blog/templates/update_post.html
+++ b/blog/templates/update_post.html
@@ -1,9 +1,10 @@
 {% extends 'base.html'   %}
+
 {% block title %}
 Edit post
 {% endblock %}
-{% block content %}
 
+{% block content %}
 {% if user.is_authenticated %}
     <h1>Update Post</h1>
     <br/><br/>
@@ -12,9 +13,9 @@ Edit post
             {% csrf_token %}
             {{ form.as_p }}
             <button class="btn btn-secondary">Update</button>
-    <div/>
+        </form>
+    </div>
 {% else %}
 You're  not allowed here
 {% endif %}
-
 {% endblock %}
