fix code syle issues, replace views with cbv and add author field to cat models

--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -1,12 +1,12 @@
-{% extends 'base.html'   %}
+{% extends 'base.html' %}
 
 {% block content %}
 <h1>Post</h1>
 <ul>
 {% for post in object_list %}
-    <li><a href="{% url 'article-detail' post.pk %}">
+    <li><a href="{% url 'post-detail' post.pk %}">
         {{ post.title }}</a>
-        - <a href ="{% url 'category' post.category|slugify%}">{{ post.category }}</a>
+        - <a href ="{% url 'category' post.category.pk %}">{{ post.category }}</a>
         - {{ post.author.first_name}}
         {{ post.author.last_name }} -
         {{ post.post_date }}
@@ -15,7 +15,10 @@
             <a href="{% url 'delete_post' post.pk %}">(Delete)</a>
         {% endif %}
         <br/>
-        {{ post.body|slice:":200"|safe }}</li>
+        <div class = "post_body">
+            {{ post.body }}
+        </div>
+    </li>
 {% endfor %}
 </ul>
 {% endblock %}
