--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -1,12 +1,14 @@
 <!doctype html>
 <html lang="en">
+{% load static %}
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'blog/blog.css' %}">
     <title>
       {% block title %}
-      My first blog
+        My first blog
        {% endblock %}
     </title>
   </head>
@@ -24,16 +26,13 @@
                   Categories
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    {% for item in cat_menu %}
-                    <a class="dropdown-item" href="{% url 'category' item|slugify%}">
-                        {{ item }}</a>
+                        {% for item in cat_menu %}
+                    <a class="dropdown-item" href="{% url 'category' item.pk %}">
+                        {{ item }}
+                        </a>
                     {% endfor %}
                 </div>
               </li>
-            {% else %}
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'category-list' %}">Categories</a>
-            </li>
             {% endif %}
             {% if user.is_authenticated %}
                 <li class="nav-item">
