--- a/blog/templates/categories.html
+++ b/blog/templates/categories.html
@@ -1,6 +1,7 @@
 {% extends 'base.html'   %}
 
 {% block content %}
+    <h1>{{ post.category }}</h1>
     <ul>
     {% for post in category_posts %}
         <li><a href="{% url 'post-detail' post.pk %}">
