only admin can do smth with posts

--- a/blog/templates/add_category.html
+++ b/blog/templates/add_category.html
@@ -1,7 +1,7 @@
 {% extends 'base.html'   %}
 
 {% block content %}
-{% if user.is_authenticated %}
+{% if user.is_superuser %}
     <h1>Add Category</h1>
     <div class="form-group">
         <form method="POST">
