--- a/blog/templates/add_post.html
+++ b/blog/templates/add_post.html
@@ -2,7 +2,7 @@
 
 
 {% block content %}
-{% if user.is_authenticated %}
+{% if user.is_superuser %}
     <h1>Add Post</h1>
     <br/><br/>
     <div class="form-group">
