--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -35,12 +35,14 @@
               </li>
             {% endif %}
             {% if user.is_authenticated %}
-                <li class="nav-item">
-                     <a class="nav-link" href="{% url 'add_post' %}">Add Post</a>
-                </li>
-                <li class="nav-item">
-                     <a class="nav-link" href="{% url 'add_category' %}">Add Category</a>
-                </li>
+                {% if user.is_superuser %}
+                    <li class="nav-item">
+                         <a class="nav-link" href="{% url 'add_post' %}">Add Post</a>
+                    </li>
+                    <li class="nav-item">
+                         <a class="nav-link" href="{% url 'add_category' %}">Add Category</a>
+                    </li>
+                {% endif %}
                 <li class="nav-item">
                      <a class="nav-link" href="{% url 'logout' %}">Logout</a>
                 </li>
