--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -10,7 +10,7 @@
         - {{ post.author.first_name}}
         {{ post.author.last_name }} -
         {{ post.post_date }}
-        {% if user.is_authenticated %}
+        {% if user.is_superuser %}
             - <a href="{% url 'update_post' post.pk %}">(Edit)</a>
             <a href="{% url 'delete_post' post.pk %}">(Delete)</a>
         {% endif %}
