--- a/blog/templates/post_details.html
+++ b/blog/templates/post_details.html
@@ -1,8 +1,5 @@
 {% extends 'base.html'   %}
 
-{% block title %}
-    {{ post.title_tag }}
-{% endblock %}
 
 {% block content %}
     <h1>{{ post.title }}</h1>
@@ -10,7 +7,7 @@
         {{ post.author.first_name}}
         {{ post.author.last_name}} -
         {{ post.post_date }}
-        {% if user.is_authenticated %}
+        {% if user.is_superuser %}
             - <a href="{% url 'update_post' post.pk %}">(Edit)</a>
             <a href="{% url 'delete_post' post.pk %}">(Delete)</a>
         {% endif %}
