--- a/blog/templates/update_post.html
+++ b/blog/templates/update_post.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-{% if user.is_authenticated %}
+{% if user.is_superuser %}
     <h1>Update Post</h1>
     <br/><br/>
     <div class="form-group">
