--- a/blog/static/blog/blog.css
+++ b/blog/static/blog/blog.css
@@ -10,4 +10,23 @@
     white-space:nowrap;
     text-overflow:ellipsis;
     width:500px;
+    margin: 10px 0 10px;
+}
+
+.btn-secondary{
+    margin-top:20px;
+    margin-bottom: 20px;
+}
+
+.form-group{
+    margin: 50px 0 50px;
+}
+
+.text {
+    padding: 10px;
+}
+.title{
+    background-color: #efe635;
+    color: white;
+    font-size: 80px;
 }
