--- a/blog/templates/add_post.html
+++ b/blog/templates/add_post.html
@@ -1,16 +1,14 @@
 {% extends 'base.html'   %}
 
-
 {% block content %}
 {% if user.is_superuser %}
-    <h1>Add Post</h1>
-    <br/><br/>
-    <div class="form-group">
-        <form method="POST">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <button class="btn btn-secondary">Add Post</button>
-        </form>
-    </div>
+        <div class="text title"><h1>Add Post</h1></div>
+        <div class="form-group">
+            <form method="POST">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button class="btn btn-secondary">Add Post</button>
+            </form>
+        </div>
 {% endif %}
 {% endblock %}
