--- a/blog/templates/post_details.html
+++ b/blog/templates/post_details.html
@@ -11,10 +11,8 @@
             - <a href="{% url 'update_post' post.pk %}">(Edit)</a>
             <a href="{% url 'delete_post' post.pk %}">(Delete)</a>
         {% endif %}
-    </small><br/>
+    </small>
     <hr>
-    <br/>
-{{ post.body|safe }}
-    <br/><br/>
+    {{ post.body|safe }}
     <a href="{% url 'home' %}" class="btn btn-secondary">Back</a>
 {% endblock %}
