fix author field in forms

--- a/blog/templates/add_category.html
+++ b/blog/templates/add_category.html
@@ -10,5 +10,9 @@
             <button class="btn btn-secondary">Add Category</button>
         </form>
     </div>
+    <script>
+        var name = "{{ user.id }}";
+        document.getElementById("admin").value = name;
+    </script>
 {% endif %}
 {% endblock %}
