--- a/blog/templates/add_post.html
+++ b/blog/templates/add_post.html
@@ -2,13 +2,17 @@
 
 {% block content %}
 {% if user.is_superuser %}
-        <div class="text title"><h1>Add Post</h1></div>
-        <div class="form-group">
-            <form method="POST">
-                {% csrf_token %}
-                {{ form.as_p }}
-                <button class="btn btn-secondary">Add Post</button>
-            </form>
-        </div>
+    <div class="text title"><h1>Add Post</h1></div>
+    <div class="form-group">
+        <form method="POST">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button class="btn btn-secondary">Add Post</button>
+        </form>
+    </div>
+    <script>
+        var name = "{{ user.id }}";
+        document.getElementById("admin").value = name;
+    </script>
 {% endif %}
 {% endblock %}
