--- a/blog/templates/add_post.html
+++ b/blog/templates/add_post.html
@@ -3,9 +3,7 @@
 {% block content %}
 {% if user.is_superuser %}
     <div class="text title">
-        <h1>
-            Add Post
-        </h1>
+        <h1>Add Post</h1>
     </div>
     <div class="form-group">
         <form method="POST">
