use proxy model for save superuser id

--- a/blog/static/blog/blog.css
+++ b/blog/static/blog/blog.css
@@ -25,8 +25,9 @@
 .text {
     padding: 10px;
 }
+
 .title{
-    background-color: #efe635;
+    background-color: #7c35ef;
     color: white;
     font-size: 80px;
 }
