--- a/blog/templates/post_details.html
+++ b/blog/templates/post_details.html
@@ -14,5 +14,22 @@
     </small>
     <hr>
     {{ post.body|safe }}
+    <hr>
+    <h2>Comments</h2>
+    {% if not post.comments.all %}
+        No comments yet...
+    {% else %}
+        {% for comment in post.comments.all %}
+            <strong>
+                    {{ comment.author }} -
+                    {{ comment.date_added }}
+            </strong>
+            {{ comment.body }}
+            <hr>
+        {% endfor %}
+    {% endif %}
+    {% if user.is_authenticated %}
+        <a href="{% url 'add_comment' post.pk %}">Add comment</a>
+    {% endif %}
     <a href="{% url 'home' %}" class="btn btn-secondary">Back</a>
 {% endblock %}
