--- a/blog/static/blog/blog.css
+++ b/blog/static/blog/blog.css
@@ -13,6 +13,16 @@
     margin: 10px 0 10px;
 }
 
+.post-detail-body{
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
+.back-btn {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
 .btn-secondary{
     margin-top: 20px;
     margin-bottom: 20px;
