--- a/blog/templates/post_details.html
+++ b/blog/templates/post_details.html
@@ -1,6 +1,5 @@
 {% extends 'base.html'   %}
 
-
 {% block content %}
     <h1>{{ post.title }}</h1>
     <small> By:
@@ -12,9 +11,9 @@
             <a href="{% url 'delete_post' post.pk %}">(Delete)</a>
         {% endif %}
     </small>
-    <hr>
-    {{ post.body|safe }}
-    <hr>
+    <div class="post-detail-body">
+        {{ post.body|safe }}
+    </div>
     <h2>Comments</h2>
     {% if not post.comments.all %}
         No comments yet...
@@ -31,5 +30,7 @@
     {% if user.is_authenticated %}
         <a href="{% url 'add_comment' post.pk %}">Add comment</a>
     {% endif %}
+    <div class='back-btn'>
     <a href="{% url 'home' %}" class="btn btn-secondary">Back</a>
+    </div>
 {% endblock %}
