--- a/blog/templates/registration/login.html
+++ b/blog/templates/registration/login.html
@@ -13,4 +13,11 @@
             <button class="btn btn-secondary">Login</button>
         </form>
     </div>
+    <div class="social">
+        <ul>
+            <li class="google">
+                <a href="{% url "social:begin" "google-oauth2" %}"> Sign in with Google</a>
+            </li>
+        </ul>
+    </div>
  {% endblock %}
